--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,11 @@
   
   <div class="row">
     <div class="col-12">
-      <a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard</a>
+      <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page frontend</a>            
+      <a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard example</a>
       <a href="http://www.gaitanalyzer.info" class="btn btn-info btn-block">Bootcamp project</a>
-      <a href="www.linkedin.com/in/jkedmiston" class="btn btn-info btn-block">LinkedIn</a>
+      <a href="http://www.linkedin.com/in/jkedmiston" class="btn btn-info btn-block">LinkedIn</a>
+      <a href="{{urls.main.google_scholar}}" class="btn btn-info btn-block">Google Scholar publications</a>
     </div>
   </div>
   </div>
