fix static js scripts

--- a/templates/index_dash.html
+++ b/templates/index_dash.html
@@ -698,25 +698,25 @@
 {% block javascripts %}
   {{ super()}}
   <!-- Chart.js -->
-  <script src="{{ url_for('static', filename='vendors/Chart.js/dist/Chart.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/Chart.js/dist/Chart.min.js') }}"></script>
   <!-- gauge.js -->
-  <script src="{{ url_for('static', filename='vendors/gauge.js/dist/gauge.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/gauge.js/dist/gauge.min.js') }}"></script>
   <!-- Skycons -->
-  <script src="{{ url_for('static', filename='vendors/skycons/skycons.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/skycons/skycons.js') }}"></script>
   <!-- Flot -->
-  <script src="{{ url_for('static', filename='vendors/Flot/jquery.flot.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/Flot/jquery.flot.pie.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/Flot/jquery.flot.time.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/Flot/jquery.flot.stack.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/Flot/jquery.flot.resize.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/Flot/jquery.flot.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/Flot/jquery.flot.pie.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/Flot/jquery.flot.time.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/Flot/jquery.flot.stack.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/Flot/jquery.flot.resize.js') }}"></script>
   <!-- Flot plugins -->
-  <script src="{{ url_for('static', filename='vendors/flot.orderbars/js/jquery.flot.orderBars.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/flot-spline/js/jquery.flot.spline.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/flot.curvedlines/curvedLines.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/flot.orderbars/js/jquery.flot.orderBars.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/flot-spline/js/jquery.flot.spline.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/flot.curvedlines/curvedLines.js') }}"></script>
   <!-- DateJS -->
-  <script src="{{ url_for('static', filename='vendors/DateJS/build/date.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/DateJS/build/date.js') }}"></script>
   <!-- JQVMap -->
-  <script src="{{ url_for('static', filename='vendors/jqvmap/dist/jquery.vmap.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/jqvmap/dist/maps/jquery.vmap.world.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendors/jqvmap/examples/js/jquery.vmap.sampledata.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/jqvmap/dist/jquery.vmap.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/jqvmap/dist/maps/jquery.vmap.world.js') }}"></script>
+  <script src="{{ url_for('static', filename='gentelella/jqvmap/examples/js/jquery.vmap.sampledata.js') }}"></script>
 {% endblock javascripts %}
