fix spelling error

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
       <a href="http://www.gaitanalyzer.info" class="btn btn-info btn-block">Bootcamp project</a>
       <a href="http://www.linkedin.com/in/jkedmiston" class="btn btn-info btn-block">LinkedIn</a>
       <a href="{{urls.main.google_scholar}}" class="btn btn-info btn-block">Google Scholar publications</a>
+      <a href="{{urls.main.github}}" class="btn btn-info btn-block">Google Scholar publications</a>      
       <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>      
     </div>
   </div>
