--- a/templates/layouts/base_site.html
+++ b/templates/layouts/base_site.html
@@ -15,22 +15,22 @@
 
       {% block stylesheets %}
         <!-- Bootstrap -->
-        <link href="{{ url_for('static', filename='gentellela/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='gentelella/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
         <!-- Font Awesome -->
-        <link href="{{ url_for('static', filename='gentellela/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='gentelella/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
         <!-- NProgress -->
-        <link href="{{ url_for('static', filename='gentellela/nprogress/nprogress.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='gentelella/nprogress/nprogress.css') }}" rel="stylesheet">
         <!-- bootstrap-daterangepicker -->
-        <link href="{{ url_for('static', filename='gentellela/bootstrap-daterangepicker/daterangepicker.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='gentelella/bootstrap-daterangepicker/daterangepicker.css') }}" rel="stylesheet">
         <!-- iCheck -->
-        <link href="{{ url_for('static', filename='gentellela/iCheck/skins/flat/green.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='gentelella/iCheck/skins/flat/green.css') }}" rel="stylesheet">
         <!-- bootstrap-progressbar -->
-        <link href="{{ url_for('static', filename='gentellela/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='gentelella/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css') }}" rel="stylesheet">
         <!-- JQVMap -->
-        <link href="{{ url_for('static', filename='gentellela/jqvmap/dist/jqvmap.min.css') }}" rel="stylesheet"/>
+        <link href="{{ url_for('static', filename='gentelella/jqvmap/dist/jqvmap.min.css') }}" rel="stylesheet"/>
       {% endblock stylesheets %}
       <!-- Custom Theme Style -->
-      <link href="{{ url_for('static', filename='build-gentellela/css/custom.css') }}" rel="stylesheet">
+      <link href="{{ url_for('static', filename='build-gentelella/css/custom.css') }}" rel="stylesheet">
     {% endblock head %}
   </head>
 
@@ -65,39 +65,39 @@
 
       {% block javascripts %}
         <!-- jQuery -->
-        <script src="{{ url_for('static', filename='gentellela/jquery/dist/jquery.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/jquery/dist/jquery.min.js') }}"></script>
         <!-- Bootstrap -->
-        <script src="{{ url_for('static', filename='gentellela/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/bootstrap/dist/js/bootstrap.min.js') }}"></script>
         <!-- FastClick -->
-        <script src="{{ url_for('static', filename='gentellela/fastclick/lib/fastclick.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/fastclick/lib/fastclick.js') }}"></script>
         <!-- NProgress -->
-        <script src="{{ url_for('static', filename='gentellela/nprogress/nprogress.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/nprogress/nprogress.js') }}"></script>
         <!-- bootstrap-progressbar -->
-        <script src="{{ url_for('static', filename='gentellela/bootstrap-progressbar/bootstrap-progressbar.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/bootstrap-progressbar/bootstrap-progressbar.min.js') }}"></script>
         <!-- iCheck -->
-        <script src="{{ url_for('static', filename='gentellela/iCheck/icheck.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/iCheck/icheck.min.js') }}"></script>
         <!-- bootstrap-daterangepicker -->
-        <script src="{{ url_for('static', filename='gentellela/moment/min/moment.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='gentellela/bootstrap-daterangepicker/daterangepicker.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/moment/min/moment.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/bootstrap-daterangepicker/daterangepicker.js') }}"></script>
         <!-- bootstrap-wysiwyg -->
-        <script src="{{ url_for('static', filename='gentellela/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='gentellela/jquery.hotkeys/jquery.hotkeys.js') }}"></script>
-        <script src="{{ url_for('static', filename='gentellela/google-code-prettify/src/prettify.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/jquery.hotkeys/jquery.hotkeys.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/google-code-prettify/src/prettify.js') }}"></script>
         <!-- jQuery Tags Input -->
-        <script src="{{ url_for('static', filename='gentellela/jquery.tagsinput/src/jquery.tagsinput.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/jquery.tagsinput/src/jquery.tagsinput.js') }}"></script>
         <!-- Switchery -->
-        <script src="{{ url_for('static', filename='gentellela/switchery/dist/switchery.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/switchery/dist/switchery.min.js') }}"></script>
         <!-- Select2 -->
-        <script src="{{ url_for('static', filename='gentellela/select2/dist/js/select2.full.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/select2/dist/js/select2.full.min.js') }}"></script>
         <!-- Autosize -->
-        <script src="{{ url_for('static', filename='gentellela/autosize/dist/autosize.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/autosize/dist/autosize.min.js') }}"></script>
         <!-- jQuery autocomplete -->
-        <script src="{{ url_for('static', filename='gentellela/devbridge-autocomplete/dist/jquery.autocomplete.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/devbridge-autocomplete/dist/jquery.autocomplete.min.js') }}"></script>
         <!-- starrr -->
-        <script src="{{ url_for('static', filename='gentellela/starrr/dist/starrr.js') }}"></script>
+        <script src="{{ url_for('static', filename='gentelella/starrr/dist/starrr.js') }}"></script>
       {% endblock %}
       <!-- Custom Theme Scripts -->
-      <script src="{{ url_for('static', filename='build-gentellela/js/custom.js') }}"></script>
+      <script src="{{ url_for('static', filename='build-gentelella/js/custom.js') }}"></script>
     {% endblock body %}
   </body>
 </html>
