--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,15 @@
 <div class="container">
   
   <div class="row">
+    Links for John Edmiston!
+    
     <div class="col-12">
       <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page frontend</a>            
       <a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard example</a>
       <a href="http://www.gaitanalyzer.info" class="btn btn-info btn-block">Bootcamp project</a>
       <a href="http://www.linkedin.com/in/jkedmiston" class="btn btn-info btn-block">LinkedIn</a>
       <a href="{{urls.main.google_scholar}}" class="btn btn-info btn-block">Google Scholar publications</a>
-      <a href="{{urls.main.github}}" class="btn btn-info btn-block">Google Scholar publications</a>      
+      <a href="{{urls.main.github}}" class="btn btn-info btn-block">Github</a>      
       <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>      
     </div>
   </div>
