--- a/templates/index_dash.html
+++ b/templates/index_dash.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base_site.html" %}
 
-{% block title %} Dashboard  {% endblock title %}
+{% block title %} Flask-Gentelella Dashboard  {% endblock title %}
 
 {% block stylesheets %}
   {{ super() }}
