--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block nav_bar_content %}
-<a href="/" class="btn btn-info">Home</a>  
+<!-- <a href="/" class="btn btn-info">Home</a>  -->
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -10,12 +10,10 @@
 
     I am an experienced generalist programmer and engineer, who loves integrating across software/hardware levels, and from backend to front end. For a collection of proof of concept/starter work I put together for this site, please peruse below!
     <div class="col-12">
+      <a href="{{urls.main.github}}" class="btn btn-info btn-block">Github for this app</a>
       <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page frontend</a>
    <a href="/admin" class="btn btn-info btn-block">Admin panel integration</a>                  
       <a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard example</a>
-      
-      
-      <a href="{{urls.main.github}}" class="btn btn-info btn-block">Github for this app</a>            
       <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>
       <br>
     </div>
