add remark on WIP

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@
   <div class="row">
     <h3>John Edmiston</h3>
 
-    I am an experienced generalist programmer and engineer, who loves integrating across software/hardware levels, and from backend to front end. For a collection of proof of concept/starter work I put together for this site, please peruse below!
+    I am an experienced generalist programmer and engineer, who loves integrating across software/hardware levels, and from backend to front end. For a collection of proof of concept/starter work I put together for this site, please peruse below. This is a WIP! 
     <div class="col-12">
       <a href="{{urls.main.github}}" class="btn btn-info btn-block">Github for this app</a>
       <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page frontend</a>
-      <a href="{{url_for('reports_bp.latex_demo')}}" class="btn btn-info btn-block">LaTeX report generation and delivery</a>      
+      <a href="{{url_for('reports_bp.latex_demo')}}" class="btn btn-info btn-block">LaTeX report generation (see source code)</a>      
    <a href="/admin" class="btn btn-info btn-block">Admin panel integration</a>                  
       <a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard example</a>
       <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>
