enable safari csp -- re-add link

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page frontend</a>
       <a href="{{url_for('reports_bp.latex_demo')}}" class="btn btn-info btn-block">LaTeX report generation (see source code)</a>      
    <a href="/admin" class="btn btn-info btn-block">Admin panel integration</a>                  
-   <!--<a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard example</a> need to fix Safari... -->
+   <a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard example</a>
       <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>
       <br>
     </div>
