--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <div class="row">
     <h3>John Edmiston</h3>
 
-    I am an experienced generalist programmer and engineer, who loves integrating across software/hardware levels, and from backend to front end. For a collection of proof of concept/starter work I put together for this site, please peruse below. This is a WIP! 
+    Welcome! I must have linked this page to a job application at your company! Regarding the front end-- I am many things, but an expert in front end design is not one of them. However, I am an experienced generalist programmer and engineer, who loves integrating across software/hardware levels, and from backend to front end. For a collection of proof of concept/starter work I put together for this site, please peruse below. This is a highly active WIP! 
     <div class="col-12">
       <a href="{{urls.main.github}}" class="btn btn-info btn-block">Github for this app</a>
       <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page frontend</a>
