--- a/templates/partials/reports/basic_form.html
+++ b/templates/partials/reports/basic_form.html
@@ -1,5 +1,11 @@
 <form method="POST" >
   {{ form.csrf_token }}
-  {{ form.name.label }} {{ form.name(size=40) }}
+  <table>
+  {% for field in form if field.id != 'csrf_token' and field.id != 'submit' %}
+  <tr>
+    <td> {{ field.label }} </td><td>{{ field(size=40) }} </td>
+    </tr>
+ {% endfor %}
+ </table>
 {{ form.submit}} <!--  <input type="submit" value="Go">-->
 </form>
