--- a/templates/reports/analyze_user_sheet.html
+++ b/templates/reports/analyze_user_sheet.html
@@ -7,12 +7,12 @@
   <br>
   <h5>Instructions for use.</h5>
   <ul>
-    <li>Obtain some numerical data you would like to analyze. </li>
-    <li>Give this app permission to edit the sheet, the email is {{service_email}}</li>
+    <li>Prepare some numerical data you would like to analyze in a Google sheet. </li>
+    <li>Give this app permission to edit the sheet, the email to use is {{service_email}}</li>
     <li>In the form below, enter in the URL for your sheet, and the name of the tab where your data resides. </li>
     <li>Click analyze!</li>
     <li>Basic analysis of each column of data will be provided at the tab with the same name + "analysis". </li>    
-
+    <li>Additionally, a LaTeX document will be generated and delivered with similar summary information.</li>
     </ul>
   <div class="row">
     {{form_html|safe}}
