[main] add info on landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <p>
       Welcome! I am an experienced generalist programmer and engineer, who loves integrating across software/hardware
       levels, and from backend to frontend. I put together for this site for a collection of proof of concept/starter
-      work. The app demonstrates a few backend resources/combinations typical of SaaS apps.
+      work. The app demonstrates a few backend resources/combinations typical of SaaS apps. See my resume and LinkedIn pages for a more extensive education and research history, with several years developing parallel simulation codes for scientific computing. 
     </p>
 
     <h4>Tech Stack</h4>
