--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <p>
       Welcome! I am an experienced generalist programmer and engineer, who loves integrating across software/hardware
       levels, and from backend to frontend. I put together for this site for a collection of proof of concept/starter
-      work. The app demonstrates a few backend resources/combinations typical of SaaS apps.
+      work. The app demonstrates a few backend resources/combinations typical of SaaS apps. See my resume and LinkedIn pages for a more extensive education and research history, with several years developing parallel simulation codes for scientific computing. 
     </p>
 
     <h4>Tech Stack</h4>
@@ -24,10 +24,10 @@
         <a href="https://docs.celeryproject.org/en/stable/getting-started/introduction.html" target="_blank">Celery</a>, for background tasks, also featuring a regular task scheduler (see Heroku configuration).
       </li>
       <li>
-        <a href="https://flask-admin.readthedocs.io/en/latest/">Flask-Admin</a> for DB management
+        <a href="https://flask-admin.readthedocs.io/en/latest/">Flask-Admin</a> for DB management.
       </li>
       <li>
-        <a href="https://plotly.com/dash/" target="_blank">Plotly Dash</a>, for interactive plotting/dashboards
+        <a href="https://plotly.com/dash/" target="_blank">Plotly Dash</a>, for interactive plotting/dashboards.
       </li>
       <li>
         <a href="https://www.heroku.com" target="_blank">Heroku</a>, for quick building of apps. See the configuration screenshot below:
@@ -37,39 +37,43 @@
     <figure>
       <img src="{{url_for('static', filename='figures/heroku_config.png')}}" width=600px alt="Heroku configuration">
       <figcaption>
-        <a href="https://www.heroku.com" target="_blank">Heroku</a> configuration screenshot, showing background workers. The Beat
-        worker adjusts a value in the database every 10 seconds (you can see this via refreshing the Flask-Admin page at
+Configuration with web dyno, worker dyno, and beat dyno. The Beat
+        dyno randomly adjusts a value in the database every 10 seconds (you can see this via refreshing the Flask-Admin page at
         this <a href="/admin/randomdata">endpoint</a>.
       </figcaption>
     </figure>
-
+<br>
     <div class="col-12">
-      <a href="{{urls.main.github}}" target="_blank" class="btn btn-info btn-block">Github for this app</a>
-      <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page
+<h4>Things to do within this app</h4>
+      <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella 
         frontend</a>
-      <a href="{{url_for('reports_bp.latex_demo')}}" class="btn btn-info btn-block">LaTeX report generation (see source
-        code)</a>
-      <a href="/admin" class="btn btn-info btn-block">Admin panel integration</a>
-      <a href="/pk" class="btn btn-info btn-block">Plotly Dash Dashboard example</a>
-      <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>
-      <br>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-info btn-block dropdown-toggle" type="button" data-toggle="dropdown">External links
-        <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li>
-          <a href="http://www.linkedin.com/in/jkedmiston" target="_blank" lass="btn btn-info">LinkedIn</a>
-        </li>
-        <li>
-          <a href="{{urls.main.google_scholar}}" target="_blank" class="btn btn-info btn-block">Google Scholar publications</a>
-        </li>
-        <li>
-          <a href="http://www.gaitanalyzer.info" target="_blank" class="btn btn-info btn-block">Bootcamp project</a>
-        </li>
-      </ul>
-    </div>
+      <a href="{{url_for('reports_bp.latex_demo')}}" class="btn btn-info btn-block">Generate an example LaTeX report</a>
+      <a href="/present_sheet" class="btn btn-info btn-block">Interact with Google sheets</a>
+      <a href="{{url_for('reports_bp.analyze_user_sheet')}}" class="btn btn-info btn-block">Automatic data analysis</a>      
+      <a href="/admin" class="btn btn-info btn-block">Admin panel (Proof of concept)</a>
 
+      <a href="/pk" class="btn btn-info btn-block" target="_blank">Plotly Dash (Proof of concept)</a>
+      
+
+    </div>
+    
+    <h4> External links </h4>
+    <ul>
+      <li>
+      <a href="{{urls.main.github}}" target="_blank" >Github for this app</a>
+      </li>
+        <li>
+          <a href="http://www.linkedin.com/in/jkedmiston" target="_blank">JE's LinkedIn page</a>
+        </li>
+        <li>
+          <a href="{{urls.main.google_scholar}}" target="_blank">Google Scholar publications</a>
+        </li>
+        <li>
+          <a href="http://www.gaitanalyzer.info" target="_blank">Gait analysis project</a>
+        </li>
+</ul>      
+    <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>
+    
   </div>
 
 </div>
