[main] add logging connection

--- a/templates/pubsub/pubsub_demo.html
+++ b/templates/pubsub/pubsub_demo.html
@@ -6,10 +6,8 @@
   <br>
   <h5>Instructions for use.</h5>
   <ul>
-    <li>Create a new Google spreadsheet where you want results</li>
-    <li>In the form below, enter in the URL for your sheet, and the desired name of the tab this app will write to (e.g. Sheet1 is the default).</li>
-    <li>Click submit!</li>
-    </ul>
+    <li> TBD </li>
+  </ul>
   <div class="row">
     {{form_html|safe}}
   </div>
