--- a/templates/site_template/sidebar.html
+++ b/templates/site_template/sidebar.html
@@ -39,7 +39,21 @@
         </li>
       </ul>
     </div>
-    
+    <div class="menu_section">
+      <h3>Demos</h3>
+      <ul class="nav side-menu">
+      <li><a><i class="fa fa-gears"></i> Demos on this app<span class="fa fa-chevron-down"></span></a>
+        <ul class="nav child_menu">
+          <li><a href="{{url_for('reports_bp.latex_demo')}}" target="_blank">Generate an example LaTeX report</a></li>
+          <li><a href="{{url_for('reports_bp.present_sheet')}}" target="_blank">Interact with Google sheets</a></li>            
+          <li><a href="{{url_for('reports_bp.analyze_user_sheet')}}" target="_blank">Automatic data analysis</a></li>
+          <li><a href="/admin" target="_blank" >Admin panel (Proof of concept)</a></li>
+          <li><a href="/pk" target="_blank">Plotly Dash (Proof of concept)</a></li>
+          </ul>
+      </li>
+      </ul>
+    </div>
+            
     <div class="menu_section">
       <h3>Work history</h3>
       <ul class="nav side-menu">
